# cookiecutter-dab

./: LICENSE  Makefile  README.md  cookiecutter.json  local_extensions.py  pyproject.toml  todos.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  databricks.yml  noxfile.py  pyproject.toml  {% if cookiecutter license == 'Proprietary' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DOCUMENTATION.md  FEATURE_REQUEST.md
{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml  documentation.yml  labeler.yml  release.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  contributing.md  index.md  quickstart.md
{{cookiecutter.project_slug}}/examples/: .gitkeep  example.ipynb
{{cookiecutter.project_slug}}/resources/: {{cookiecutter.package_name}}_job.yml
{{cookiecutter.project_slug}}/scratch/: README.md
{{cookiecutter.project_slug}}/src/: notebook.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  common.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/workloads/: example.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_example.py  test_main.py
{{cookiecutter.project_slug}}/tests/data/: .gitkeep
