[tool.poetry]
name = "cookiecutter-dab"
version = "0.1.0"
description = "A Cookiecutter template for creating production-ready Databricks Asset Bundles"
authors = ["Zach Zankov <zach.zankov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
